--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,3 +18,7 @@
 .ct-menu-item {
   @apply hover:text-black relative lg:after:absolute lg:after:w-0 lg:after:h-0.5 lg:after:bg-red-300 lg:after:bottom-0 lg:after:left-0 hover:lg:after:w-full lg:after:transition-all lg:after:ease-in-out lg:after:duration-300;
 }
+
+.ct-product-item-btn-explore {
+  @apply absolute w-[90%] text-center uppercase bg-white text-black py-2 px-3 text-sm my-3 bottom-[0] left-[50%] transform translate-x-[-50%] opacity-0 group-hover:opacity-100 transition-all ease-in-out duration-300;
+}
