--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,3 +22,7 @@
 .ct-product-item-btn-explore {
   @apply absolute w-[90%] text-center uppercase bg-white text-black py-2 px-3 text-sm my-3 bottom-[0] left-[50%] transform translate-x-[-50%] opacity-0 group-hover:opacity-100 transition-all ease-in-out duration-300;
 }
+
+.ct-input-subscribe {
+  @apply px-3 py-3 w-[90%] lg:w-[50%] outline-none bg-transparent text-white border border-white/20 hover:border-white transition-all ease-in-out duration-200 placeholder:text-white/40 placeholder:font-semibold placeholder:uppercase placeholder:text-sm;
+}
